# cpp-stl-2022-05-16

./: .gitignore  README.md
_exercise/1_containers/: gadget_pool_ex.cpp  sequential_containers_ex.cpp
_exercise/2_vector_deque_list_catch_benchmark/: CMakeLists.txt  test_helpers.hpp  vector_dq_lst_benchmarks.cpp
_exercise/2_vector_deque_list_catch_benchmark/quick-bench/: pre_post_increment.cpp  push_backs_ints.cpp  push_backs_objects_moveable.cpp  push_backs_objects_nomoveable.cpp  removing_from_inside.cpp  sorting_ints.cpp  sorting_objects_moveable.cpp  sorting_objects_nomoveable.cpp
_exercise/3_spellcheck/: CMakeLists.txt  spellcheck.cpp
_exercise/4_concordance/: CMakeLists.txt  concordance.cpp  proust.txt
_exercise/5_basic_algorithms/: CMakeLists.txt  basic_algorithms.cpp
_exercise/9_objects_and_lambdas/: objects_and_lambda.cpp  person.cpp  person.hpp
_project-template/: tests.cpp
algorithms/: tests.cpp
associative-containers/: CMakeLists.txt  tests.cpp
hashed-containers/: CMakeLists.txt  tests.cpp
iterators/: stl_helpers.hpp  tests.cpp
parallel-stl/: CMakeLists.txt  main.cpp  tests.cpp
sequence-containers/: stl_helpers.hpp  tests.cpp
